--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -19,6 +19,6 @@
        <li>Appetite (Catered event!)</li>
    </ul>
 
-<h3>Here is the <a href="">location</a></h3>
+<h3>Here is the <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">location</a></h3>
 </body>
 </html>
